--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/node": "^20",
