--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.4",
     "next-connect": "^1.0.0",
