--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.4",
     "next-connect": "^1.0.0",
+    "primereact": "^10.6.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
