--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "chart.js": "^4.4.3",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.4",
     "next-connect": "^1.0.0",
