--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-connect": "^1.0.0",
     "primereact": "^10.6.6",
     "react": "^18",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
